k3s/cluster/apps/replicated/vaultwarden/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  rules:
    - host: passwords.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
